<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PokerServer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="three_border">three_border</string>
    <string name="player_pic">player_pic</string>
    <string name="player_timer">player_timer</string>
    <string name="player_poker">player_poker</string>
    <string name="player_pushedpoker">player_pushedpoker</string>
    <string name="countdown">25</string>
    <string name="init_poker_number">0</string>
    <string name="first_player_name">第一个玩家</string>
    <string name="second_player_name">第二个玩家</string>
    <string name="third_player_name">第三个玩家</string>

</resources>